[tool.poetry]
name = "ublue-os_forge"
version = "0.1.0"
description = "Ansible automation for Universal Blue"
authors = ["Stephan Lüscher <stephan.luescher@mykolab.com>"]
license = "../LICENSE"
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.11"
ansible-core = "^2.16"
jmespath = "^1.0"
nicegui = "^1.4.23"
ansible-runner = "^2.3.6"
requests = "^2.32.0"
pandas = "^2.2.2"
humanize = "^4.9.0"

[tool.poetry.group.dev.dependencies]
ansible-lint = { version = "^24.2", markers = 'platform_system != "Windows"' } # https://github.com/ansible/ansible-lint/issues/2730#issuecomment-1330406601

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
