[project]
name = "ublue-os_forge"
version = "0.2.2"
description = "Ansible automation for Universal Blue"
authors = [{name = "Stephan Lüscher", email = "code@luescher.io"}]
license = "../LICENSE"
readme = "../README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "ansible-core(>=2.20,<2.21)",
    "jmespath (>=1.0,<2.0)",
    "nicegui (>=3.0.0,<4.0.0)",
    "ansible-runner(>=2.4.2,<3.0.0)",
    "requests(>=2.32.2,<3.0.0)",
    "pandas(>=2.2.2,<3.0.0)",
    "humanize(>=4.9.0,<5.0.0)",
    "toml(>=0.10.2,<0.11.0)"
]

[tool.poetry]
[tool.poetry.group.dev.dependencies]
ansible-lint = { version = "25.12.1", markers = 'platform_system != "Windows"' } # https://github.com/ansible/ansible-lint/issues/2730#issuecomment-1330406601

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"