[tool.poetry]
name = "ublue-os_forge"
version = "0.1.0"
description = "Ansible automation for Universal Blue"
authors = ["Stephan Lüscher <stephan.luescher@mykolab.com>"]
license = "../LICENSE"
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.9"
ansible-core = "^2.14.5"
jmespath = "^1.0.1"
dnspython = "^2.3.0"

[tool.poetry.dev-dependencies]
ansible-lint = { version = "^6.14.1", markers = 'platform_system != "Windows"' }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
